nullaway_error_93a39458-f5fb-481b-ac48-fbf036ee0aba.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/registry/RemoteRegionRegistry.java:500: error: [NullAway] dereferenced expression this.applications.get() is @Nullable
        return this.applications.get().getRegisteredApplications(appName);
                                      ^
